--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "./general/general";
 @import "./general/fuentes";
 @import "./portada/portada";
-@import "./header/nav";
+//@import "./header/nav";
 @import "./portada/fog";
 @import "./general/scroll";
 @import "./portada/cards";
