--- a/scss/portada/_fog.scss
+++ b/scss/portada/_fog.scss
@@ -1,7 +1,7 @@
 .container_fog {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: hidden;
     z-index: 99;
     .img_fog {
