--- a/style/main.css
+++ b/style/main.css
@@ -103,13 +103,13 @@ body {
   .container_fog .img_fog_1 {
     background: url("../imagenes/fog-1.png");
     background-repeat: repeat-x;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     animation: marquee 60s linear infinite; }
   .container_fog .img_fog_2 {
     background: url("../imgagenes/fog-2.png");
     background-repeat: repeat-x;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     animation: marquee 30s linear infinite; }
 
