--- a/scss/portada/_fog.scss
+++ b/scss/portada/_fog.scss
@@ -18,7 +18,7 @@
         animation: marquee 60s linear infinite;
     }
     .img_fog_2 {
-        background: url("../imgagenes/fog-2.png");
+        background: url("../imagenes/fog-2.png");
         background-repeat: repeat-x;
         background-size: cover;
         background-position: center;
