--- a/style/main.css
+++ b/style/main.css
@@ -197,8 +197,8 @@ body {
         bottom: 20px;
         background: #474e4e;
         border: 2px solid #474e4e;
-        border-radius: 15px;
         box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+        border-radius: 15px;
         transition: .5s; }
       .products_content .container_cards .card .box:hover {
         transform: translateY(-50px);
@@ -277,5 +277,57 @@ body {
     height: 200px; } }
 
 footer {
-  height: 50px;
-  background: white; }
+  padding: 40px 0;
+  background: #474e4e;
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1); }
+  footer .social {
+    text-align: center;
+    padding-bottom: 25px;
+    color: #4b4c4d; }
+    footer .social a {
+      font-size: 24px;
+      color: #aaa49d;
+      border: 1px solid #ccc;
+      width: 40px;
+      height: 40px;
+      line-height: 38px;
+      display: inline-block;
+      text-align: center;
+      border-radius: 50%;
+      margin: 0 8px;
+      background: #474e4e;
+      border: 2px solid #474e4e;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
+      animation: 1s; }
+    footer .social a:hover {
+      scale: 1.2; }
+      footer .social a:hover .fa-instagram {
+        color: #cf2eb4; }
+      footer .social a:hover .fa-facebook-f {
+        color: #1e4297; }
+      footer .social a:hover .fa-twitter {
+        color: #52a8e7; }
+      footer .social a:hover .fa-whatsapp {
+        color: #1e9910; }
+  footer ul {
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center; }
+    footer ul li {
+      display: inline-block;
+      padding: 0 15px; }
+      footer ul li a {
+        color: inherit;
+        text-decoration: none;
+        opacity: .8; }
+      footer ul li a:hover {
+        opacity: 1; }
+  footer .copyright {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 13px;
+    color: #aaa; }
