--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -53,12 +53,13 @@ footer {
             display: inline-block;
             padding: 0 15px;
             a {
-                color: inherit;
+                color: #aaa49d;
+                text-shadow: 5px 5px 15px rgba(0, 0, 0, .3),
+                            -5px -5px 15px rgba(255, 255, 255, .1);
                 text-decoration: none;
-                opacity: .8;
             }
             a:hover {
-                opacity: 1;
+                color: black;
             }
         }
     }
