--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -59,7 +59,8 @@ footer {
                 text-decoration: none;
             }
             a:hover {
-                color: black;
+                color: white;
+                text-shadow: 0 0 15px #9d822b;
             }
         }
     }
