--- a/scss/header/_nav.scss
+++ b/scss/header/_nav.scss
@@ -1,60 +1,67 @@
-// .nav {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     display: flex;
-//     justify-content: space-around;
-//     transition: .7s;
-//     padding: 30px 20px;
-//     z-index: 11;
-//     .logo {
-//         position: relative;
-//         color: white;
-//         font-weight: bold;
-//         font-size: 2rem;
-//         letter-spacing: 2px;
-//         transition: 1.5s;
-//         text-decoration: none;
-//     }
-//     nav {
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//         ul {
-//             position: relative;
-//             display: flex;
-//             justify-content: center;
-//             align-items: center;
-//             li {
-//                 list-style: none;
-//                 a {
-//                     position: relative;
-//                     margin: 0 15px;
-//                     text-decoration: none;
-//                     color: white;
-//                     letter-spacing: 2px;
-//                     font-weight: 600;
-//                     transition: .7s;
-//                 }
-//             }
-//         }
-//     }
-// }
-
-.abajo {
-    background: white;
-    padding: 15px 20px;
+.header_nav {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    z-index: 101;
     .logo {
-        color: black;
+        max-width: 5rem;
+        border-radius: 50%;
     }
-    nav {
-        ul {
+    .nav {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        gap: 1rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: -100vh;
+        background: #474e4e;
+        box-shadow: inset 5px 5px 5px rgba(0, 0, 0, .2),
+                    inset -5px -5px 15px rgba(255, 255, 255, .1),
+                    5px 5px 15px rgba(0, 0, 0, .3),
+                    -5px -5px 15px rgba(255, 255, 255, .1);
+        padding: 2rem;
+        opacity: 0;
+        visibility: hidden;
+        .nav_list {
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+            gap: 1rem;
             li {
                 a {
-                    color: black;
+                    text-decoration: none;
+                    color: #aaa49d;
+                    text-shadow: 5px 5px 15px rgba(0, 0, 0, .3),
+                                -5px -5px 15px rgba(255, 255, 255, .1);
+                    font-size: 2vh;
+                }
+                
+                a:hover {
+                    color: white;
+                    text-shadow: 0 0 15px #9d822b;
                 }
             }
         }
+    }
+    .visible {
+        opacity: 1;
+        visibility: visible;
+    }
+    
+    .menu_abrir,
+    .menu_cerrar {
+        display: block;
+        border: 0;
+        font-size: 3vh;
+        background-color: transparent;
+        cursor: pointer;
+        color: white;
+        text-shadow: 0 0 15px #9d822b;
     }
 }
