--- a/scss/portada/_cards.scss
+++ b/scss/portada/_cards.scss
@@ -4,7 +4,6 @@
     place-items: center;
     width: 100%;
     margin-top: 10%;
-    z-index: 100;
 }
 .products_content {
 	--main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
@@ -31,6 +30,7 @@
                         -5px -5px 15px rgba(255, 255, 255, .1);
             border-radius: 15px;
             margin: 30px;
+            z-index: 105;
             .box {
                 position: absolute;
                 top: 20px;
@@ -42,7 +42,8 @@
                 box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
                 border-radius: 15px;
                 transition: .5s;
-                opacity: .75;
+                opacity: .5;
+                cursor: pointer;
             }
             .box:hover {
                 //transform: translateY(-50px);
@@ -109,7 +110,7 @@
 }
 
 .products_title {
-    font-size: 7vh;
+    font-size: 5vh;
     text-transform: uppercase;
     font-weight: 900;
     color: #aaa49d;
