--- a/style/main.css
+++ b/style/main.css
@@ -89,6 +89,58 @@ body {
   font-size: calc(var(--index) * .75);
   letter-spacing: calc(var(--index) / 37.5); }
 
+.header_nav {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem;
+  z-index: 101; }
+  .header_nav .logo {
+    max-width: 5rem;
+    border-radius: 50%; }
+  .header_nav .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: -100vh;
+    background: #474e4e;
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+    padding: 2rem;
+    opacity: 0;
+    visibility: hidden; }
+    .header_nav .nav .nav_list {
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      gap: 1rem; }
+      .header_nav .nav .nav_list li a {
+        text-decoration: none;
+        color: #aaa49d;
+        text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+        font-size: 2vh; }
+      .header_nav .nav .nav_list li a:hover {
+        color: white;
+        text-shadow: 0 0 15px #9d822b; }
+  .header_nav .visible {
+    opacity: 1;
+    visibility: visible; }
+  .header_nav .menu_abrir,
+  .header_nav .menu_cerrar {
+    display: block;
+    border: 0;
+    font-size: 3vh;
+    background-color: transparent;
+    cursor: pointer;
+    color: white;
+    text-shadow: 0 0 15px #9d822b; }
+
 .container_fog {
   position: absolute;
   width: 100%;
@@ -164,8 +216,7 @@ body {
   display: grid;
   place-items: center;
   width: 100%;
-  margin-top: 10%;
-  z-index: 100; }
+  margin-top: 10%; }
 
 .products_content {
   --main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
@@ -188,7 +239,8 @@ body {
       height: 440px;
       box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
       border-radius: 15px;
-      margin: 30px; }
+      margin: 30px;
+      z-index: 105; }
       .products_content .container_cards .card .box {
         position: absolute;
         top: 20px;
@@ -200,7 +252,8 @@ body {
         box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
         border-radius: 15px;
         transition: .5s;
-        opacity: .75; }
+        opacity: .5;
+        cursor: pointer; }
       .products_content .container_cards .card .box:hover {
         scale: 1.05;
         opacity: 1;
@@ -252,7 +305,7 @@ body {
         background-position: center; }
 
 .products_title {
-  font-size: 7vh;
+  font-size: 5vh;
   text-transform: uppercase;
   font-weight: 900;
   color: #aaa49d;
@@ -332,9 +385,111 @@ footer {
         text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
         text-decoration: none; }
       footer ul li a:hover {
-        color: black; }
+        color: white;
+        text-shadow: 0 0 15px #9d822b; }
   footer .copyright {
     margin-top: 15px;
     text-align: center;
     font-size: 13px;
     color: #aaa; }
+
+.porque {
+  display: grid;
+  place-items: center;
+  width: 100%;
+  margin-top: 10%; }
+  .porque h1 {
+    font-size: 5vh;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: #aaa49d;
+    text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+    padding-bottom: 2rem; }
+  .porque .container_porque {
+    --main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    flex-wrap: wrap;
+    gap: 2rem; }
+    .porque .container_porque .aprovecha,
+    .porque .container_porque .asesorias,
+    .porque .container_porque .eliges,
+    .porque .container_porque .estilo {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: start;
+      width: 70vh;
+      height: 15vh;
+      box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2), inset -5px -5px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+      border-radius: 15px; }
+      .porque .container_porque .aprovecha i,
+      .porque .container_porque .asesorias i,
+      .porque .container_porque .eliges i,
+      .porque .container_porque .estilo i {
+        font-size: 4vh;
+        padding: 3rem;
+        color: white;
+        text-shadow: 0 0 15px #9d822b; }
+      .porque .container_porque .aprovecha p,
+      .porque .container_porque .asesorias p,
+      .porque .container_porque .eliges p,
+      .porque .container_porque .estilo p {
+        font-size: 2vh;
+        font-weight: 600;
+        color: white;
+        text-shadow: 0 0 15px #9d822b;
+        padding-right: 3vh; }
+        .porque .container_porque .aprovecha p span,
+        .porque .container_porque .asesorias p span,
+        .porque .container_porque .eliges p span,
+        .porque .container_porque .estilo p span {
+          color: #aaa49d;
+          text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1); }
+
+@media (max-width: 950px) {
+  .porque .container_porque .aprovecha,
+  .porque .container_porque .asesorias,
+  .porque .container_porque .eliges,
+  .porque .container_porque .estilo {
+    width: 60vh; } }
+
+@media (max-width: 850px) {
+  .porque .container_porque .aprovecha,
+  .porque .container_porque .asesorias,
+  .porque .container_porque .eliges,
+  .porque .container_porque .estilo {
+    width: 50vh; }
+    .porque .container_porque .aprovecha p,
+    .porque .container_porque .asesorias p,
+    .porque .container_porque .eliges p,
+    .porque .container_porque .estilo p {
+      font-size: 1.5vh; } }
+
+@media (max-width: 720px) {
+  .porque .container_porque .aprovecha,
+  .porque .container_porque .asesorias,
+  .porque .container_porque .eliges,
+  .porque .container_porque .estilo {
+    width: 40vh; }
+    .porque .container_porque .aprovecha i,
+    .porque .container_porque .asesorias i,
+    .porque .container_porque .eliges i,
+    .porque .container_porque .estilo i {
+      padding: 1rem; } }
+
+@media (max-width: 570px) {
+  .porque .container_porque .aprovecha,
+  .porque .container_porque .asesorias,
+  .porque .container_porque .eliges,
+  .porque .container_porque .estilo {
+    width: 30vh; }
+    .porque .container_porque .aprovecha i,
+    .porque .container_porque .asesorias i,
+    .porque .container_porque .eliges i,
+    .porque .container_porque .estilo i {
+      padding: 1rem; } }
