--- a/style/main.css
+++ b/style/main.css
@@ -397,14 +397,15 @@ footer {
   display: grid;
   place-items: center;
   width: 100%;
-  margin-top: 10%; }
+  margin-top: 10%;
+  text-align: center; }
   .porque h1 {
-    font-size: 5vh;
+    font-size: calc(var(--index) * 1.65);
     text-transform: uppercase;
     font-weight: 900;
     color: #aaa49d;
     text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
-    padding-bottom: 2rem; }
+    padding-bottom: 3rem; }
   .porque .container_porque {
     --main-article-transform: translate3d(0, calc(var(--scrollTop) / -7.5), 0);
     color: white;
