--- a/scss/header/_nav.scss
+++ b/scss/header/_nav.scss
@@ -9,6 +9,7 @@
     .logo {
         max-width: 5rem;
         border-radius: 50%;
+        visibility: hidden;
     }
     .nav {
         display: flex;
