--- a/scss/footer/_footer.scss
+++ b/scss/footer/_footer.scss
@@ -27,18 +27,20 @@ footer {
         }
         a:hover {
             scale: 1.2;
-            .fa-instagram {
-                color: #cf2eb4;
-            }
-            .fa-facebook-f {
-                color: #1e4297;
-            }
-            .fa-twitter {
-                color: #52a8e7;
-            }
-            .fa-whatsapp {
-                color: #1e9910;
-            }
+            color: white;
+            text-shadow: 0 0 15px #9d822b;
+            // .fa-instagram {
+            //     color: #cf2eb4;
+            // }
+            // .fa-facebook-f {
+            //     color: #1e4297;
+            // }
+            // .fa-twitter {
+            //     color: #52a8e7;
+            // }
+            // .fa-whatsapp {
+            //     color: #1e9910;
+            // }
         }
     }
     ul {
