--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,4 +6,5 @@
 @import "./general/scroll";
 @import "./portada/cards";
 @import "./footer/footer";
-@import "./porque/porque";
+@import "./info/porque";
+@import "./info/proceso";
