--- a/scss/header/_nav.scss
+++ b/scss/header/_nav.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
     padding: 2rem;
     z-index: 101;
+    transition: height 10s cubic-bezier(0.23, 1, 0.320, 1);
     .logo {
         max-width: 5rem;
         border-radius: 50%;
@@ -28,6 +29,7 @@
         padding: 2rem;
         opacity: 0;
         visibility: hidden;
+        transition: height 1s cubic-bezier(0.23, 1, 0.320, 1);
         .nav_list {
             list-style-type: none;
             display: flex;
