--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "./general/general";
+@import "./general/loader";
 @import "./general/fuentes";
 @import "./portada/portada";
 @import "./header/nav";
